--- a/Client/html/style.css
+++ b/Client/html/style.css
@@ -7,3 +7,11 @@ h1 {
     max-height: 200px;
     overflow-y: auto;
 }
+
+#userList {
+    height: 200px;
+    width: 200px;
+    border: 1px solid black;
+    position: absolute;
+    right: 10px;
+}
