--- a/Client/html/style.css
+++ b/Client/html/style.css
@@ -2,7 +2,10 @@ h1 {
     text-align: center;
     font-family: 'Muli', sans-serif;
 }
-
+#content {
+    width: 90%;
+    margin: auto;
+}
 #messageArea {
     max-height: 200px;
     overflow-y: auto;
@@ -12,6 +15,30 @@ h1 {
     height: 200px;
     width: 200px;
     border: 1px solid black;
-    position: absolute;
-    right: 10px;
+    float: right;
+    text-align: center;
+}
+
+#quiz {
+    height: 200px;
+    width: 50%;
+    float: right;
+    font-family: 'Muli', sans-serif;
+}
+
+#questionArea {
+    font-size: 2em;
+}
+
+#answerArea {
+    padding-top: 2em;
+}
+
+#userListHeader {
+    font-weight: bold;
+    border-bottom: 1px solid black;
+}
+
+#userBar {
+    float: left;
 }
