--- a/Client/html/styles/game.css
+++ b/Client/html/styles/game.css
@@ -98,7 +98,8 @@ body {
     width: 106.25px;
     height: 106.25px;
     border-radius: 5px;
-    -webkit-transition: transform 400ms ease-in-out;
+    -webkit-transition: -webkit-transform 400ms ease-in-out;
+    -moz-transition: -moz-transform 400ms ease-in-out;
     transition: transform 400ms ease-in-out;
 }
 .tile-red {
