Fixed game view model

--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -8,7 +8,7 @@ body {
     background-color: #F8F1E9;
 }
 
-.container {
+.game-view-container {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
