--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -2,6 +2,20 @@
     margin-top: 20px;
 }
 
+.chatWindow {
+    position: relative;
+    top: 60px;
+    width: auto;
+    height: auto;
+    max-height: 200px;
+    overflow: auto;
+}
+
+.chatBar {
+    position: relative;  
+    top: 60px;
+}
+
 table {
     position: absolute;
     margin-top: 30px;
@@ -14,6 +28,10 @@ h1 {
 
 input {
     width: 90px;
+}
+
+.chatBar input {
+    width: 150px;
 }
 
 #quiz {
@@ -33,3 +51,4 @@ input {
     border-bottom: 1px solid black;
     text-align:center;
 }
+
