Changed references to 'chat' to 'gameChat'

--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -2,7 +2,7 @@
     margin-top: 20px;
 }
 
-.chatWindow {
+.gameChatWindow {
     position: relative;
     top: 60px;
     width: auto;
@@ -11,7 +11,7 @@
     overflow: auto;
 }
 
-.chatBar {
+.gameChatBar {
     position: relative;  
     top: 60px;
 }
