Updated game viewmodel to display player's name in the same colour as their tiles

--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -50,6 +50,12 @@ body {
     font-weight: 900;
     color: #00CBE7;
 }
+.player-name-red {
+    color: #DF151A;
+}
+.player-name-blue {
+    color: #00CBE7;
+}
 .game-container {
     width: 500px;
     height: 500px;
