--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -1,3 +1,26 @@
+@red: #DF151A;
+@blue: #00CBE7;
+@green: #00DA3C;
+@yellow: #F4F328;
+
+@tileSize: 100px;
+@gridSpacing: 15px;
+@gridCount: 4;
+
+@gridSize: ((@gridCount + 1) * @gridSpacing) + (@gridCount * @tileSize);
+
+@pallete-1: #A8A39D;
+@pallete-2: #D8C8B8;
+@pallete-3: #8D7966;
+@pallete-4: #F8F1E9;
+
+@gameTick: 200ms;
+
+body {
+    color: @pallete-3;
+    background-color: @pallete-4;
+}
+
 .game-title {
     margin-top: 25px;
     text-align: center;
@@ -5,14 +28,14 @@
     font-weight: 900;
 }
 .game-container {
-    width: 500px;
-    height: 500px;
-    padding: 15px;
+    width: @gridSize;
+    height: @gridSize;
+    padding: @gridSpacing;
     margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 5px;
-    background-color: #A8A39D;
+    background-color: @pallete-1;
 }
 .grid-container {
     position: absolute;
@@ -21,7 +44,7 @@
 .grid-row {
     display: flex;
     flex-wrap: nowrap;
-    margin-bottom: 15px;
+    margin-bottom: @gridSpacing;
 }
 .grid-row:after {
     content: "";
@@ -32,10 +55,10 @@
     margin-bottom: 0px;
 }
 .grid-cell {
-    width: 106.25px;
-    height: 106.25px;
-    margin-right: 15px;
-    background-color: #D8C8B8;
+    width: @tileSize;
+    height: @tileSize;
+    margin-right: @gridSpacing;
+    background-color: @pallete-2;
     border-radius: 5px;
     float: left;
 }
@@ -44,12 +67,11 @@
 }
 .game-info-container {
     margin-top: 25px;
-    width: 500px;
+    width: @gridSize;
     margin-right: auto;
     margin-left: auto;
 }
 .player-turn {
-
     position:absolute;
     clear:both;
     display: block;
@@ -57,30 +79,30 @@
     font-size: 2em;
     font-weight: 900;
     text-align: center;
-    width:500px;
+    width: @gridSize;
     height:3.2em;
 }
 .red-score {
     display: inline;
-    padding-left: 70px;
+    padding-left: @gridSize / 7;
     float: left;
     font-size: 3em;
     font-weight: 900;
-    color: #DF151A;
+    color: @red;
 }
 .blue-score {
     float: right;
-    padding-right: 70px;
+    padding-right: @gridSize / 7;
     display: inline;
     font-size: 3em;
     font-weight: 900;
-    color: #00CBE7;
+    color: @blue;
 }
 .player-name-red {
-    color: #DF151A;
+    color: @red;
 }
 .player-name-blue {
-    color: #00CBE7;
+    color: @blue;
 }
 
 .tile-container {
@@ -89,110 +111,47 @@
 }
 .tile {
     position: inherit;
-    width: 106.25px;
-    height: 106.25px;
+    width: @tileSize;
+    height: @tileSize;
     border-radius: 5px;
-    -webkit-transition: -webkit-transform 200ms ease-in-out;
-    -moz-transition: -moz-transform 200ms ease-in-out;
-    transition: transform 200ms ease-in-out;
+    -webkit-transition: -webkit-transform @gameTick ease-in-out;
+    -moz-transition: -moz-transform @gameTick ease-in-out;
+    transition: transform @gameTick ease-in-out;
     z-index: 3;
 }
 .tile-red {
-    background-color: #DF151A
+    background-color: @red;
 }
 .tile-blue {
-    background-color: #00CBE7
+    background-color: @blue;
 }
 .tile-green {
-    background-color: #00DA3C
+    background-color: @green;
 }
 .tile-yellow {
-    background-color: #F4F328
+    background-color: @yellow;
 }
-.tile-position-0-0 {
-    -webkit-transform: translate(0px, 0px);
-    -moz-transform: translate(0px, 0px);
-    transform: translate(0px, 0px);
+
+.generate-columns(@x, @y) when (@y < @gridCount) {
+    .tile-position-@{x}-@{y} {
+        -webkit-transform: translate(((@y * @tileSize) + (@y * @gridSpacing)), ((@x * @tileSize) + (@x * @gridSpacing)));
+        -moz-transform: translate(((@y * @tileSize) + (@y * @gridSpacing)), ((@x * @tileSize) + (@x * @gridSpacing)));
+        transform: translate(((@y * @tileSize) + (@y * @gridSpacing)), ((@x * @tileSize) + (@x * @gridSpacing)));         
+    }
+    .generate-columns(@x, @y + 1)
 }
-.tile-position-0-1 {
-    -webkit-transform: translate(121.25px, 0px);
-    -moz-transform: translate(121.25px, 0px);
-    transform: translate(121.25px, 0px);
+
+.generate-rows(@x) when (@x < @gridCount) {
+    .generate-columns(@x, 0);
+    .generate-rows(@x + 1);
 }
-.tile-position-0-2 {
-    -webkit-transform: translate(242.5px, 0px);
-    -moz-transform: translate(242.5px, 0px);
-    transform: translate(242.5px, 0px);
-}
-.tile-position-0-3 {
-    -webkit-transform: translate(363.75px, 0px);
-    -moz-transform: translate(363.75px, 0px);
-    transform: translate(363.75px, 0px);
-}
-.tile-position-1-0 {
-    -webkit-transform: translate(0px, 121.25px);
-    -moz-transform: translate(0px, 121.25px);
-    transform: translate(0px, 121.25px);
-}
-.tile-position-1-1 {
-    -webkit-transform: translate(121.25px, 121.25px);
-    -moz-transform: translate(121.25px, 121.25px);
-    transform: translate(121.25px, 121.25px);
-}
-.tile-position-1-2 {
-    -webkit-transform: translate(242.5px, 121.25px);
-    -moz-transform: translate(242.5px, 121.25px);
-    transform: translate(242.5px, 121.25px);
-}
-.tile-position-1-3 {
-    -webkit-transform: translate(363.75px, 121.25px);
-    -moz-transform: translate(363.75px, 121.25px);
-    transform: translate(363.75px, 121.25px);
-}
-.tile-position-2-0 {
-    -webkit-transform: translate(0px, 242.5px);
-    -moz-transform: translate(0px, 242.5px);
-    transform: translate(0px, 242.5px);
-}
-.tile-position-2-1 {
-    -webkit-transform: translate(121.25px, 242.5px);
-    -moz-transform: translate(121.25px, 242.5px);
-    transform: translate(121.25px, 242.5px);
-}
-.tile-position-2-2 {
-    -webkit-transform: translate(242.5px, 242.5px);
-    -moz-transform: translate(242.5px, 242.5px);
-    transform: translate(242.5px, 242.5px);
-}
-.tile-position-2-3 {
-    -webkit-transform: translate(363.75px, 242.5px);
-    -moz-transform: translate(363.75px, 242.5px);
-    transform: translate(363.75px, 242.5px);
-}
-.tile-position-3-0 {
-    -webkit-transform: translate(0px, 363.75px);
-    -moz-transform: translate(0px, 363.75px);
-    transform: translate(0px, 363.75px);
-}
-.tile-position-3-1 {
-    -webkit-transform: translate(121.25px, 363.75px);
-    -moz-transform: translate(121.25px, 363.75px);
-    transform: translate(121.25px, 363.75px);
-}
-.tile-position-3-2 {
-    -webkit-transform: translate(242.5px, 363.75px);
-    -moz-transform: translate(242.5px, 363.75px);
-    transform: translate(242.5px, 363.75px);
-}
-.tile-position-3-3 {
-    -webkit-transform: translate(363.75px, 363.75px);
-    -moz-transform: translate(363.75px, 363.75px);
-    transform: translate(363.75px, 363.75px);
-}
+
+.generate-rows(0);
+
 .tile-new {
-    -webkit-animation: newTileFadeIn 200ms ease 100ms;
-    -moz-animation: newTileFadeIn 200ms ease 100ms;
-    animation: newTileFadeIn 200ms ease 100ms;
+    -webkit-animation: newTileFadeIn @gameTick ease @gameTick/2;
+    -moz-animation: newTileFadeIn @gameTick ease @gameTick/2;
+    animation: newTileFadeIn @gameTick ease @gameTick/2;
     -webkit-animation-fill-mode: backwards;
     -moz-animation-fill-mode: backwards;
     animation-fill-mode: backwards;
@@ -201,8 +160,8 @@
 .score-pop-up {
     position: inherit;
     display: inline-block;
-    width: 106.25px;
-    height: 106.25px;
+    width: @tileSize;
+    height: @tileSize;
     border-radius: 5px;
     z-index: 4;
     
@@ -211,12 +170,12 @@
     vertical-align: center;
     text-align: center;
     color: #FFF;
-    line-height: 106.25px;
+    line-height: @tileSize;
     text-shadow: black 1px 1px;
     
-    -webkit-animation: scoreFadeOut 1000ms;
-    -moz-animation: scoreFadeOut 1000ms;
-    animation: scoreFadeOut 1000ms;
+    -webkit-animation: scoreFadeOut @gameTick * 5;
+    -moz-animation: scoreFadeOut @gameTick * 5;
+    animation: scoreFadeOut @gameTick * 5;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
@@ -224,8 +183,8 @@
 
 .end-game-overlay {
     background-color: #FFF;
-    width: 400px;
-    height: 100px;
+    width: @gridSize * 4 / 5;
+    height:  @gridSize / 5;
     z-index: 5;
     position: relative;
     opacity: 0.8;
@@ -237,12 +196,12 @@
     font-weight: 900;
     vertical-align: center;
     text-align: center;
-    line-height: 100px;
+    line-height: @gridSize / 5;
     text-shadow: black 1px 1px;
 
-    -webkit-animation: overlayFloatUp 1000ms;
-    -moz-animation: overlayFloatUp 1000ms;
-    animation: overlayFloatUp 1000ms;
+    -webkit-animation: overlayFloatUp @gameTick * 5;
+    -moz-animation: overlayFloatUp @gameTick * 5;
+    animation: overlayFloatUp @gameTick * 5;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
@@ -305,25 +264,25 @@
 
 @-webkit-keyframes overlayFloatUp {
     0% {
-        transform: translateY(300px);
+        transform: translateY(@gridSize * 3 / 5);
     }
     100% {
-        transform: translateY(185px);
+        transform: translateY(@gridSize * 2 / 5);
     }
 }
 @-moz-keyframes overlayFloatUp {
     0% {
-        transform: translateY(300px);
+        transform: translateY(@gridSize * 3 / 5);
     }
     100% {
-        transform: translateY(185px);
+        transform: translateY(@gridSize * 2 / 5);
     }
 }
 @keyframes overlayFloatUp {
     0% {
-        transform: translateY(300px);
+        transform: translateY(@gridSize * 3 / 5);
     }
     100% {
-        transform: translateY(185px);
+        transform: translateY(@gridSize * 2 / 5);
     }
 }
