Added Game logo to title

--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -13,13 +13,23 @@ body {
     cursor: default;
 }
 
-h1 {
+.game-title span {
     text-align: center;
     font-family: 'Muli', sans-serif;
+    font-weight: bold;
+    font-size: 2em;
+    position: relative;
+    top: 15px;
+    left: 20px;
 }
 
 input {
     width: 90px;
+}
+
+.logo {
+    width: 5%;
+    height: 5%;
 }
 
 table {
