Updated index page to make user name more visible when logged in

--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -45,7 +45,6 @@ table {
 }
 
 .user-info {
-    padding-right: 25px;
     max-height: 450px;
     overflow: auto;
     overflow-x: hidden;
@@ -62,7 +61,12 @@ table {
     text-align: center;
 }
 
-#user-list-header {
+.username-display {
+    font-size: 1.4em;
+    text-align: center;
+}
+
+.user-list-header {
     font-weight: bold;
     border-bottom: 1px solid black;
     text-align:center;
