Fixed logo to use relative font sizing instead of scaling to page size

--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -27,13 +27,13 @@ input {
     width: 90px;
 }
 
-.logo {
-    width: 5%;
-    height: 5%;
-}
-
 table {
     margin-top: 30px;
+}
+
+.logo {
+    width: 1.4em;
+    height: 2em;
 }
 
 .chat-game {
