Changed title font to Roboto

--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -23,17 +23,16 @@ table {
 
 .game-title span {
     text-align: center;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 2em;
     position: relative;
-    top: 15px;
-    left: 20px;
+    top: 12px;
 }
 
 .logo {
-    width: 1.4em;
-    height: 2em;
+    width: 1.2em;
+    height: 1.6em;
 }
 
 .chat-lobby {
