Changed lobby chat title colour

--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -1,3 +1,5 @@
+@pallete-3: #8D7966;
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -11,6 +13,7 @@ body {
     -ms-user-select: none;
     user-select: none;
     cursor: default;
+    color: @pallete-3;
 }
 
 table {
@@ -29,6 +32,10 @@ table {
 .logo {
     width: 1.2em;
     height: 1.6em;
+}
+
+.panel-title {
+    color: @pallete-3;
 }
 
 
