Added unit tests for Tile.js and Grid.js

--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -182,10 +182,9 @@ body {
 }
 
 .game-rules {
-    width: @gridSize;
-    height: 200px;
+    /*width: @gridSize;*/
     margin-top: 100px;
-
+    margin-bottom: 50px;
     font-size: 1.2em;
     text-align: center;
 
@@ -193,6 +192,7 @@ body {
     margin-right: auto;
     margin-left: auto;
 }
+
 @keyframes newTileFadeIn {
     0% {
         opacity: 0;
