--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -60,9 +60,21 @@ body {
 }
 .game-info-container {
     margin-top: 25px;
-    width: @gridSize;
     margin-right: auto;
     margin-left: auto;
+    display: flex;
+}
+
+.player { 
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player-name {
+    font-size: 1.6em;
+    font-weight: 400;
 }
 .player-turn {
     position:absolute;
@@ -76,16 +88,10 @@ body {
     height:3.2em;
 }
 .player-1-score {
-    display: inline;
-    padding-left: @gridSize / 7;
-    float: left;
     font-size: 3em;
     font-weight: 900;
 }
 .player-2-score {
-    float: right;
-    padding-right: @gridSize / 7;
-    display: inline;
     font-size: 3em;
     font-weight: 900;
 }
