--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -166,24 +166,29 @@ body {
 
     background-color: #FFF;
     z-index: 5;
-    position: relative;
     opacity: 0.8;
     border-radius: 5px;
-    margin-right: auto;
-    margin-left: auto;
-
-    width: @gridSize * 4 / 5;
+    width: 45%;
     height:  @gridSize / 5;
-
     font-size: 2em;
     font-weight: 900;
-    vertical-align: center;
     text-align: center;
     line-height: @gridSize / 5;
     text-shadow: black 1px 1px;
+    z-index: 5;
 
     animation: overlayFloatUp @gameTick * 5;
     animation-fill-mode: forwards;
+}
+
+.end-game-overlay-container {
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+    height: 475px;
+    width: 930px;
+    justify-content: center;
+    position: absolute;
 }
 
 .game-rules {
@@ -220,9 +225,8 @@ body {
 
 @keyframes overlayFloatUp {
     0% {
-        transform: translateY(@gridSize * 3 / 5);
+        transform: translateY(50px);
     }
     100% {
-        transform: translateY(@gridSize * 2 / 5);
     }
 }
