Added next tile display under gameboard

--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -1,7 +1,7 @@
 @red: #DF151A;
 @blue: #00CBE7;
 @green: #00DA3C;
-@yellow: #F4F328;
+@yellow: #FFCD07;
 
 @tileSize: 100px;
 @gridSpacing: 15px;
@@ -55,6 +55,7 @@ body {
     border-radius: 5px;
     float: left;
 }
+
 .grid-cell:last-child {
     margin-right: 0px;
 }
@@ -63,13 +64,16 @@ body {
     margin-right: auto;
     margin-left: auto;
     display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
 }
 
 .player { 
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 50px;
+
 }
 
 .player-name {
@@ -107,6 +111,16 @@ body {
     border-radius: 5px;
     transition: transform @gameTick ease-in-out;
     z-index: 3;
+}
+
+.next-tile {
+    width: 0.8 * @tileSize;
+    height:0.8 * @tileSize;
+    text-shadow: 0px 0px 3px #000;display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
+    color: white;
 }
 
 .tile-red {
