Fixed positioning of user list and leaderboard, removed unnecessary connected message and moved game instructions further down page

--- a/Client/src/less/index.less
+++ b/Client/src/less/index.less
@@ -10,14 +10,20 @@ body {
     font-weight: 300;
 }
 
+p {
+    margin: 0 0 4px;
+    font-size: 14px;
+}
+
 .leaderboard {
     margin-top: 30px;
     background-color: white ;
 }
 
-#leaderboardHeader {
+.leaderboard-header {
     font-family: 'Roboto', sans-serif;
     text-align: center;
+    height: 40px;
 }
 
 .login-container {
@@ -121,6 +127,7 @@ body {
     height: 450px;
     background-color: white;
     margin-bottom: 30px;
+    margin-top: 30px;
   
  }
 
