Stopped long names running over into scores

--- a/Client/src/less/game.less
+++ b/Client/src/less/game.less
@@ -81,6 +81,11 @@ body {
 .player-name {
     font-size: 1.6em;
     font-weight: 400;
+    text-align: center;
+    width: 150px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .player-turn {
     position:absolute;
